--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,6 +19,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Remove old dist
+        run: |
+          rm -rf dist/
+          rm -rf sybil_engine.egg-info/
       - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v3
