--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ termcolor==2.4.0
 bumpversion==0.6.0
 binance-connector==3.5.1
 base58==2.1.1
+google-api-python-client==2.126.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
