--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ base58==2.1.1
 google-api-python-client==2.126.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
+eth-tester==0.10.0b4
+py-evm==0.10.0b6
